--- a/Desktop/2022-2/2023-1/오픈소스/Mid-Term-Project/89_32184594_최성진.html
+++ b/Desktop/2022-2/2023-1/오픈소스/Mid-Term-Project/89_32184594_최성진.html
@@ -1,7 +1,39 @@
 <html>
 <head>
+    <title>최성진의 자기소개 홈페이지</title>
+    <style>
+        * { 
+            margin: 0; padding: 0;
+            font-family: '맑은 고딕', 'Malgun Gothic', Gothic, sans-serif;
+        }
+        a { text-decoration: none; }
+        li { list-style: none; }
+    </style>
+    <style>
+        .pull-left { float: left; }
+        .pull-right { float:right; }
+    </style>
+    <style>
+        body {
+            width: 960px; margin: 0 auto;
+            background: #fffdff;
+        }
+    </style>
+    <style>
+        #main-header { 
+            padding: 60px 70px; 
+            background-image: url('background.jpg');
+            background-size: 100%;
+            background-repeat: no-repeat;
+        }
+       
+    </style>
 </head>
 <body>
-    
+    <header id = "main-header">
+        <hgroup>
+            <h1>최성진의 자기소개 홈페이지</h1>
+        </hgroup>
+    </header>
 </body>
 </html>
