--- a/Desktop/2022-2/2023-1/오픈소스/Mid-Term-Project/89_32184594_최성진.html
+++ b/Desktop/2022-2/2023-1/오픈소스/Mid-Term-Project/89_32184594_최성진.html
@@ -10,10 +10,6 @@
         li { list-style: none; }
     </style>
     <style>
-        .pull-left { float: left; }
-        .pull-right { float:right; }
-    </style>
-    <style>
         body {
             width: 960px; margin: 0 auto;
             background: #fffdff;
@@ -28,6 +24,26 @@
         }
        
     </style>
+    <style>
+      article { 
+        padding: 0 10px 20px 10px;
+        border-bottom: 1px solid #C8C8C8;
+    }
+
+    .article-header { padding: 20px 0; }
+    .article-title { 
+        font-size: 25px;
+        font-weight: 700; 
+        padding-bottom: 10px;
+        background-color: rgba(12, 177, 227, 0.536);
+        text-align: center;
+    }
+    .article-body {font-size: 13px; text-align: center;}
+    .information{ 
+                font-size: 13px; 
+                text-align: center;
+                }
+</style>
 </head>
 <body>
     <header id = "main-header">
@@ -35,5 +51,39 @@
             <h1>최성진의 자기소개 홈페이지</h1>
         </hgroup>
     </header>
+    <article>
+        <div class ="article-header">
+            <h1 class="article-title"> 인사 </h1>
+        </div>
+        <div class="article-body">
+            <p2>
+                <br> 안녕하세요 소프트웨어학과 18학번 최성진 입니다. 연도별로 저를 소개하는 페이지를 만들어 보겠습니다.<br><br>
+                <br>
+
+            </p2>
+        </div>
+     </article>
+    <article>
+        <div class ="article-header">
+            <h1 class="article-title"> 기본정보 </h1>
+        </div>
+        <div class="information">
+            <p>
+                <img src="face.jpg" width="150px" >
+                <br><br>
+                이름 : 최성진<br>
+                나이 : 24세 <br>
+                생년월일 : 2000.02.11<br>
+                학과 : 소프트웨어학과 <br>
+                학번 : 32184594 (18학번) <br>
+                사는 곳 : 경기도 용인시 수지구 죽전동
+
+            </div>
+    </article>
+    <article></arricle>
+        <div class ="article-header">
+            <h1 class="article-title"> 2000 - 2017 </h1>
+        </div>
+    </article>
 </body>
 </html>
