--- a/Desktop/2022-2/2023-1/오픈소스/Mid-Term-Project/89_32184594_최성진.html
+++ b/Desktop/2022-2/2023-1/오픈소스/Mid-Term-Project/89_32184594_최성진.html
@@ -80,10 +80,38 @@
 
             </div>
     </article>
-    <article></arricle>
+    <article>
         <div class ="article-header">
             <h1 class="article-title"> 2000 - 2017 </h1>
         </div>
+        <div class="article-body">
+            <br>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12931.489956686946!2d128.49766044813236!3d35.87664152653562!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3565e576bd958a17%3A0x569cfe84d1623fe!2z7ISc7J6s67O07ISx7YOA7Jq0MeywqOyVhO2MjO2KuA!5e0!3m2!1sko!2skr!4v1683193625388!5m2!1sko!2skr"
+             width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+            <br><br><br>
+            <p>위에 보이는 지도는 제가 살던 동네 지도 입니다.</p>
+            <br><br><br>
+            <img src="village.jpg" width="400px" height = "300px">
+            <br><br><br>
+            <p>저는 어머니 고향인 서울에서 태어나 곧 바로 아버지 고향인 대구광역시에서 살게 되었습니다.
+                    위 사진은 제가 살던 동네 사진으로 저는 어린시절부터 대학교 입학하기 전까지 작은 동네에서 지내 
+                    친구들이 전부 20년지기가 넘고 도시보다는 시골 쪽에 가깝기 때문에 젊은 사람들 보단 어르신들이 많이 계셔서 
+                    어르신들에게 예의범절을 배우고 곧게 자라 왔습니다. 저의 어린시절은 요새 당연하다고 생각하는 체인점, 노래방, 피시방 등
+                    거의 없었기때문에 저는 친구들과 어르신들 농사를 도우거나 지금은 그러면 안되지만 어린 마음에 친구들과 같이 서리 등을 하는듯
+                    자연친화적으로 자라왔습니다. 
+            </p>
+        </div>
     </article>
+    <article>
+        <div class ="article-header">
+            <h1 class="article-title"> 2018 - 2019.07 </h1>
+        </div>
+        <div class="article-body">'
+        <br>
+        <p>2018년 3월 저는 지금 재학중인 소프트웨어학과가 아닌 국제자유전공학부로 단국대학교에 입학하게 되었습니다. 1학년 1학기가 끝나기전 학과 측 에서 급하게 전과를 해야한다고 
+            들어서 저는 일주일 기간 내로 가고싶은 학과를 선택해야했습니다. 갑자기 전과를 하라고 들어서 당황스러웠지만 저는 소프트웨어학과를 선택하고 현재 다니
+        </p>
+
 </body>
 </html>
