--- a/Desktop/2022-2/2023-1/오픈소스/Mid-Term-Project/89_32184594_최성진.html
+++ b/Desktop/2022-2/2023-1/오픈소스/Mid-Term-Project/89_32184594_최성진.html
@@ -109,8 +109,8 @@
         </div>
         <div class="article-body">'
         <br>
-        <p>2018년 3월 저는 지금 재학중인 소프트웨어학과가 아닌 국제자유전공학부로 단국대학교에 입학하게 되었습니다. 1학년 1학기가 끝나기전 학과 측 에서 급하게 전과를 해야한다고 
-            들어서 저는 일주일 기간 내로 가고싶은 학과를 선택해야했습니다. 갑자기 전과를 하라고 들어서 당황스러웠지만 저는 소프트웨어학과를 선택하고 현재 다니
+        <p>2018년 3월 저는 지금 재학중인 소프트웨어학과가 아닌 국제자유전공학부로 단국대학교에 입학하게 되었습니다. 
+            한 학기후 저는 소프트웨어학과로 전과하게 되었고 2019년 1학기 까지 하고 군 휴학을 하게 되었습니다.
         </p>
 
 </body>
