--- a/Desktop/2022-2/2023-1/오픈소스/Mid-Term-Project/89_32184594_최성진.html
+++ b/Desktop/2022-2/2023-1/오픈소스/Mid-Term-Project/89_32184594_최성진.html
@@ -6,8 +6,6 @@
             margin: 0; padding: 0;
             font-family: '맑은 고딕', 'Malgun Gothic', Gothic, sans-serif;
         }
-        a { text-decoration: none; }
-        li { list-style: none; }
     </style>
     <style>
         body {
@@ -112,6 +110,22 @@
         <p>2018년 3월 저는 지금 재학중인 소프트웨어학과가 아닌 국제자유전공학부로 단국대학교에 입학하게 되었습니다. 
             한 학기후 저는 소프트웨어학과로 전과하게 되었고 2019년 1학기 까지 하고 군 휴학을 하게 되었습니다.
         </p>
+        </div>
+    </article>
+    <article>
+        <div class ="article-header">
+            <h1 class="article-title"> 2019.7 - 2022.02 </h1>
+        </div>
+        <div class="article-body">
+        <br>
+        <img src="background1.jpg" width="400px" height = "300px" >
+        <br><br><br>
+        <p>
+            2019년 10월 21일 저는 공군으로 입대해 제11전투비행단에서 헌병으로 군생활을 했습니다. 1년 10개월 동안의 군생활을 끝내고
+            병장 만기전역을 한 후 저는 서울 연남동에 있는 이자카야에서 직원으로서 6개월 일하며 복학 준비를 하고 2022년 3월 복학 하게 되었습니다"
 
+        </p>
+        </div>
+    </article>
 </body>
 </html>
