--- a/Desktop/2022-2/2023-1/오픈소스/Mid-Term-Project/89_32184594_최성진.html
+++ b/Desktop/2022-2/2023-1/오픈소스/Mid-Term-Project/89_32184594_최성진.html
@@ -122,8 +122,19 @@
         <br><br><br>
         <p>
             2019년 10월 21일 저는 공군으로 입대해 제11전투비행단에서 헌병으로 군생활을 했습니다. 1년 10개월 동안의 군생활을 끝내고
-            병장 만기전역을 한 후 저는 서울 연남동에 있는 이자카야에서 직원으로서 6개월 일하며 복학 준비를 하고 2022년 3월 복학 하게 되었습니다"
+            병장 만기전역을 한 후 저는 서울 연남동에 있는 이자카야에서 직원으로서 6개월 일하며 복학 준비를 하고 2022년 3월 복학 하게 되었습니다
 
+        </p>
+        </div>
+    </article>
+    <article>
+        <div class ="article-header">
+            <h1 class="article-title"> 2022.3 - 현재 </h1>
+        </div>
+        <div class="article-body">'
+        <br>
+        <p>
+            복학 후 저는 지금까지 개발자가 되기위해 열심히 공부하며 학과 수업에 열중하고 있습니다.
         </p>
         </div>
     </article>
