--- a/Desktop/2022-2/2023-1/오픈소스/Mid-Term-Project/89_32184594_최성진.html
+++ b/Desktop/2022-2/2023-1/오픈소스/Mid-Term-Project/89_32184594_최성진.html
@@ -80,6 +80,18 @@
     </article>
     <article>
         <div class ="article-header">
+            <h1 class="article-title"> 성격 </h1>
+        </div>
+        <div class="article-body">'
+        <br>
+        <p>저는 성격이 급한 편입니다. 그래서 걸을 때도 느리게 걷질 않고 성큼성큼 빨리 걷는 편입니다.
+           또, 내성적이지는 않지만 사람이 많이 있는곳이나 시끄러운 장소는 선호하지 않고 조용하고 여유러운 장소를 좋아합니다
+           그래서 저는 조용한편이며 그래서 주위 사람들로부터 여유롭다라는 말을 자주 듣습니다.
+        </p>
+        </div>
+    </article>
+    <article>
+        <div class ="article-header">
             <h1 class="article-title"> 2000 - 2017 </h1>
         </div>
         <div class="article-body">
