--- a/Desktop/2022-2/2023-1/오픈소스/Mid-Term-Project/89_32184594_최성진.html
+++ b/Desktop/2022-2/2023-1/오픈소스/Mid-Term-Project/89_32184594_최성진.html
@@ -42,6 +42,12 @@
                 text-align: center;
                 }
 </style>
+<style>
+    p2{font-weight: 1000;
+       color:#000000;
+    }
+
+</style>
 </head>
 <body>
     <header id = "main-header">
@@ -87,6 +93,26 @@
         <p>저는 성격이 급한 편입니다. 그래서 걸을 때도 느리게 걷질 않고 성큼성큼 빨리 걷는 편입니다.
            또, 내성적이지는 않지만 사람이 많이 있는곳이나 시끄러운 장소는 선호하지 않고 조용하고 여유러운 장소를 좋아합니다
            그래서 저는 조용한편이며 그래서 주위 사람들로부터 여유롭다라는 말을 자주 듣습니다.
+        </p>
+        </div>
+    </article>
+    <article>
+        <div class ="article-header">
+            <h1 class="article-title"> 취미생활 </h1>
+        </div>
+        <div class="article-body">'
+        <br>
+        <p2>
+            저는 취미생활이라 말하기에는 애매하지만 저는 혼자 해외여행 다니는것을 좋아합니다. <br>
+            저는 혼자 여행하며 만난 인연들을 소중하게 생각하고
+            그 인연들로부터 그 나라의 문화를 배우며 세상을 넓게 보는 시야를 넓히고 있습니다.
+        </p2>
+        <br><br><br>
+        <p>
+            <img src="travel1.jpg" width="400px" height = "300px" >
+            <br><br><br>
+            <p>위 사진은 혼자 유럽 한달 여행을 하면서 찍은 런던아이 입니다. 이 때 세상은 넓고
+                 저는 우물 안 개구리였다라는 생각을 크게 가지게 되었습니다.</p>
         </p>
         </div>
     </article>
