--- a/Desktop/2022-2/2023-1/오픈소스/Mid-Term-Project/89_32184594_최성진.html
+++ b/Desktop/2022-2/2023-1/오픈소스/Mid-Term-Project/89_32184594_최성진.html
@@ -112,7 +112,25 @@
             <img src="travel1.jpg" width="400px" height = "300px" >
             <br><br><br>
             <p>위 사진은 혼자 유럽 한달 여행을 하면서 찍은 런던아이 입니다. 이 때 세상은 넓고
-                 저는 우물 안 개구리였다라는 생각을 크게 가지게 되었습니다.</p>
+                 저는 우물 안 개구리였다라는 생각을 크게 가지게 되었습니다.
+            </p>
+            <br><br><br>
+            <img src="travel2.jpg" width="400px" height = "300px" >
+            <br><br><br>
+            <p>
+                위 사진은 에펠탑에서 찍은 사진입니다. 이 한달간의 여행을 계기로 저는 혼자 해외여행 다니는걸 좋아하게 되었고
+                현재도 돈,시간만 있다면 해외여행을 즐기곤 합니다.
+            </p>
+            <br><br><br>
+            <img src="travel3.jpg" width="400px" height = "300px" >
+            <br><br><br>
+            <p>
+                위사진은 올 2월에 혼자 도쿄 갔다왔을 때 사진입니다.   
+            </p>
+            <br><br><br>
+            <p2> 저는 또한 아기를 좋아해 아기들을 보면 장난도 자주치고 같이 놀아주는 편입니다.
+            </p2>
+
         </p>
         </div>
     </article>
