--- a/Desktop/2022-2/2023-1/오픈소스/Mid-Term-Project/89_32184594_최성진.html
+++ b/Desktop/2022-2/2023-1/오픈소스/Mid-Term-Project/89_32184594_최성진.html
@@ -130,6 +130,14 @@
             <br><br><br>
             <p2> 저는 또한 아기를 좋아해 아기들을 보면 장난도 자주치고 같이 놀아주는 편입니다.
             </p2>
+            <br><br><br>
+            <video = src="baby.mp4" width="400" autoplay controls>
+            </video>
+            <br><br><br>
+            <p>위 비디오는 올 2월 도쿄에서 만난 소중한 인연입니다. 이 비디오처럼 저는 아기들에게 관대하며
+                장난도 자주치곤 합니다.
+            </p>
+            
 
         </p>
         </div>
